programming-tehniques/Z3/Z4/.gcc.out
/rhome/m/mucanbarli1/workspace/TP/Z3/Z4/main.cpp: In function ‘int DuzinaImena(std::__cxx11::string)’:
/rhome/m/mucanbarli1/workspace/TP/Z3/Z4/main.cpp:11:24: warning: suggest parentheses around ‘&&’ within ‘||’ [-Wparentheses]
         if(s.at(i)>='a'&&s.at(i)<='z' || s.at(i)>='A'&&s.at(i)<='Z' || s.at(i)>='0'&&s.at(i)<='9') brojac++;
            ~~~~~~~~~~~~^~~~~~~~~~~~~~
/rhome/m/mucanbarli1/workspace/TP/Z3/Z4/main.cpp:11:84: warning: suggest parentheses around ‘&&’ within ‘||’ [-Wparentheses]
         if(s.at(i)>='a'&&s.at(i)<='z' || s.at(i)>='A'&&s.at(i)<='Z' || s.at(i)>='0'&&s.at(i)<='9') brojac++;
                                                                        ~~~~~~~~~~~~^~~~~~~~~~~~~~
/rhome/m/mucanbarli1/workspace/TP/Z3/Z4/main.cpp: At global scope:
/rhome/m/mucanbarli1/workspace/TP/Z3/Z4/main.cpp:15:1: error: expected declaration before ‘}’ token
 }
 ^
